--- a/src/pages/globals.css
+++ b/src/pages/globals.css
@@ -35,6 +35,11 @@ a {
   text-decoration: none;
 }
 
+a:hover {
+  text-decoration: underline;
+  text-underline-offset: 10%;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
@@ -52,4 +57,16 @@ h6 {
 
 p {
   line-height: 1.2;
+}
+
+.section {
+  margin-bottom: 1rem;
+}
+
+.section-title {
+  margin-bottom: 0.5rem;
+}
+
+.margin-bottom-1 {
+  margin-bottom: .5rem;
 }
