--- a/src/pages/bill/page.module.css
+++ b/src/pages/bill/page.module.css
@@ -55,6 +55,14 @@
   padding: 0.5rem;
 }
 
+.billItemHighlight {
+  background-image: linear-gradient(
+    to right,
+    rgba(200, 0, 200, 0.3),
+    rgba(255, 182, 193, 0.3)
+  );
+}
+
 .billItems th,
 .billItems tr,
 .billItems td {
@@ -64,7 +72,6 @@
 
 .billItemName {
   text-align: left;
-  font-weight: bold;
 }
 
 .billItemAmount {
