--- a/src/pages/bill/page.module.css
+++ b/src/pages/bill/page.module.css
@@ -9,6 +9,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  word-break: break-word;
 }
 
 .billName {
@@ -18,8 +19,7 @@
 .billImageLink {
   display: flex;
   margin-left: auto;
-  position: relative;
-  min-height: 100px;
+  padding-left: 2rem;
 }
 
 .billImageLink:hover .billImage {
@@ -36,14 +36,11 @@
 
   object-fit: cover;
 
-  position: absolute;
-  top: 0;
-  right: 0;
-
   display: flex;
   min-width: 100px;
   max-width: 200px;
   height: 100%;
+  max-height: 100px;
 }
 
 .billItems {
@@ -58,8 +55,8 @@
 .billItemHighlight {
   background-image: linear-gradient(
     to right,
-    rgba(200, 0, 200, 0.3),
-    rgba(255, 182, 193, 0.3)
+    rgba(255, 255, 200, 0.3),
+    rgba(255, 255, 0, 0.3)
   );
 }
 
