--- a/src/pages/layout.module.css
+++ b/src/pages/layout.module.css
@@ -11,3 +11,19 @@
   justify-content: space-between;
   align-items: center;
 }
+
+.spinner {
+  border: 8px solid rgba(0, 0, 0, 0.1);
+  border-left-color: var(--foreground);
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 1s linear infinite;
+  margin: 0 auto;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
